--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,6 @@
         android:required="true" >
     </uses-feature>
 
-    <android:uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -43,15 +35,14 @@
             android:name=".MyPreferencesActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.WallpaperSettings" >
+            android:theme="@android:style/Theme.DeviceDefault.Settings" >
         </activity>
+
         <activity
             android:name=".SetWallpaperActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.WallpaperSettings" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
